tests/parser/valid/ok_if_else.c
int main() {
  int x;
  x = 0;
  if (x < 5) { x = x + 1; } else { x = 10; }
  return x;
}
