tests/parser/invalid/err_if_requires_block.c
int main() {
  if (1) x = 1;
}
// blocks required → expect { after )